--- a/app/src/main/res/layout/company_edit_profile_page.xml
+++ b/app/src/main/res/layout/company_edit_profile_page.xml
@@ -17,11 +17,11 @@
         android:id="@+id/editpageheader"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
-        android:layout_marginEnd="20dp"
         android:fontFamily="cursive"
-        android:text="Enter The Details To Be Updated . . ."
+        android:text="Enter The Details To Be Updated"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,12 +45,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="50dp"
         android:fontFamily="sans-serif-black"
         android:text="COMPANY NAME"
         android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/CNAME_ET"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cupdate_image_button" />
+        app:layout_constraintTop_toTopOf="@+id/CNAME_ET" />
 
 
     <TextView
@@ -58,12 +58,12 @@
         android:layout_width="wrap_content"
         android:layout_height="26dp"
         android:layout_marginStart="20dp"
-        android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-black"
         android:text="PHONE"
-        android:textSize="18sp"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toBottomOf="@+id/CPHONE_ET"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/CNAME_ET" />
+        app:layout_constraintTop_toTopOf="@+id/CPHONE_ET" />
 
     <Button
         android:id="@+id/csave_profile_button"
