fixed some constraints and ui elements

--- a/app/src/main/res/layout/activity_company_profile.xml
+++ b/app/src/main/res/layout/activity_company_profile.xml
@@ -62,7 +62,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="30dp"
         android:fontFamily="sans-serif-black"
-        android:text="EMAIL                   :   "
+        android:text="EMAIL"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameTextView" />
 
@@ -86,7 +86,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:fontFamily="sans-serif-black"
-        android:text="PHONE                  :   "
+        android:text="PHONE"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/email_text" />
 
