--- a/app/src/main/res/layout/student_profile.xml
+++ b/app/src/main/res/layout/student_profile.xml
@@ -29,7 +29,7 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar1" />
 
     <ImageButton
-        android:id="@+id/profile_pic"
+        android:id="@+id/profile_pic_student"
         android:layout_width="160dp"
         android:layout_height="160dp"
         android:layout_marginStart="30dp"
@@ -53,7 +53,7 @@
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_pic" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_pic_student" />
 
     <TextView
         android:id="@+id/roll_number_text"
